tests/api/reference/negative/12-list-eq-type.asm
const invalid: bool = list.eq(list.of(1), 1)
